# twilio-demo

./: Makefile  README.md  bridge.py  main.py  pyproject.toml  settings.py  transcription.py
static/css/: styles.css
static/js/: app.js
templates/: transcription.html
utils/: audio.py  calls.py  worker.py
